--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
 
     // persistence
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.mysql:mysql-connector-j' // 실사용
+    runtimeOnly 'com.h2database:h2' // 테스트용
 
     // auth
     implementation 'org.springframework.boot:spring-boot-starter-security'
