--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ test {
     outputs.dir snippetsDir
 }
 
-// gradle에서 dependsOn은 작업 순서라고 보기 - 정확히는 의존성이 있다. 즉, test 태스크가 수행된 다음 ascidoctor 태스크가 수행될 수 있다.
+// gradle에서 dependsOn은 작업 순서라고 보기 - 정확히는 의존성이 있다. 즉, test 태스크가 수행되어야 ascidoctor 태스크가 수행될 수 있다.
 asciidoctor {
     inputs.dir snippetsDir // snipeetsDir에 생성된 문서 파일들을 가져옴
     configurations 'asciidoctorExt'
@@ -75,15 +75,24 @@ asciidoctor {
     sources { // 특정 파일만 html로 만든다.
         include("**/index.adoc")
     }
+
     baseDirFollowsSourceFile() // 다른 adoc 파일을 include 할 때 경로를 baseDir로 맞춘다.
 
-    // dependsOn -> 작업 순서 test가 수행된 다음 asciidoctor가 수행
     dependsOn test
 }
 
 bootJar {
     dependsOn asciidoctor
     from("${asciidoctor.outputDir}") {
-        into 'static/docs'
+        into 'static/docs' // http://localhost:8080/docs/index.html 경로에서 문서를 확인할 수 있음
     }
 }
+
+/**
+ * <설정 완료 이후>
+ *     1. 테스트 작성 후 테스트 실행
+ *     2. build.gradle test 태스크가 실행되며 지정 경로에 코드 스니펫(문서 조각)이 생성
+ *     3. src디렉토리 하위에 adoc파일을 생성 -> 현재 생성하지 않은 상태(2024.04.10)
+ *     4. adoc 파일에서 앞서 생성된 코드 스니펫을 활용해 문서 ㅈ가성
+ *     5. 이후 build를 다시하면 build/docs/asciidoc/index.html이란 파일이 생기고 해당 파일이 최종 결과물
+ */
