--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     // Rest Docs convert
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
+    // mapstruct
+    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
     // REST Docs
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
