docs : dev profile 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,27 @@
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  # DB 설정
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_URL}
+    username: ${DB_USER_NAME}
+    password: ${DB_PASSWORD}
+
+  # JPA 설정
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: true
+
+#JWT
+secret-key: ${ACCESS_SECRET_KEY}
+access-expiration-hours: 1800 # 1시간
+refresh-expiration-hours: 86400 # 1일
+issuer: dadok
 
